--- a/exercises/Module 4/challenge 2/_css/main.css
+++ b/exercises/Module 4/challenge 2/_css/main.css
@@ -673,4 +673,8 @@ footer .col2 {
 	margin: 20px;
 	width: 180px;
 	height: 180px;
+	transition: transform 0.5s ease-in;
+}
+#theArt img:hover {
+	transform: scale(2,2)
 }
