--- a/exercises/Module 5/animation 1 challenge/styles.css
+++ b/exercises/Module 5/animation 1 challenge/styles.css
@@ -15,14 +15,16 @@ body {
 
 	animation-name: slide;
 	animation-duration: 2s;
-	animation-timing-function: ease-in;
-	animation-iteration-count: 3;
+	animation-timing-function: linear;
+	animation-iteration-count: 1;
+	animation-delay: 1s;
+	animation-fill-mode: both;
 
 }
 
-@keyframes slide {
-	from{transform: translateX(0);}
-	to {transform: translateX(900px);}
-}
+
+
+
+
 
 
