--- a/exercises/Module 5/animation 2 challenge/styles.css
+++ b/exercises/Module 5/animation 2 challenge/styles.css
@@ -15,8 +15,9 @@ body {
 	animation-name: slide;
 	animation-duration: 2s;
 	animation-timing-function: ease-in;
-	animation-iteration-count: 1;
+	animation-iteration-count: infinite;
 	animation-fill-mode:forwards;
+	animation-direction: alternate;
 }
 
 @keyframes slide {
