--- a/exercises/Module 5/animation play state animation/styles.css
+++ b/exercises/Module 5/animation play state animation/styles.css
@@ -17,9 +17,17 @@ body {padding:6em; background:#fcfcfc;}
   width:200px;
   height:200px;
   position:absolute;
-  background: url(sticker.png) top center no-repeat; 
+  background: url(sticker.png) top center no-repeat;
+  animation: spin 5s infinite ease;
+  animation-play-state: paused; 
 }
 
+
+@keyframes spin {
+  from {transform: rotate(0);}
+  to {transform: rotate(1turn);}
+
+}
 
 
 
