--- a/exercises/Module 5/ball challenge/styles.css
+++ b/exercises/Module 5/ball challenge/styles.css
@@ -3,16 +3,21 @@ body {margin: 4em 10%; background:#493F5B;}
 				
  .ball {
 	animation-name: move-left-right;
-	animation-duration: 2s;
+	animation-duration: 5s;
 	animation-timing-function: ease-in;
 	animation-iteration-count: 1;
- 	animation-delay:1s; 
+ 	/*animation-delay:1s; */
+ 	animation-fill-mode: both;
+ 	animation-direction: reverse;
 }
 
 @keyframes move-left-right {
 	0% {transform: translateX(100px) rotate(0turn);}
-	20% {transform: translateX(-10px) rotate(-0.5turn);}
-	100% {transform:translateX(450px) rotate(2turn);}			
+	/*20% {transform: translateX(500px) rotate(2turn);}*/
+	50% {transform:translateX(900px) rotate(5turn);}
+	100% {transform:translateX(100px) rotate(-2turn);}		
+	
+			
 }
 
 
