--- a/exercises/Module 6/multiple animation challenge solution/styles.css
+++ b/exercises/Module 6/multiple animation challenge solution/styles.css
@@ -84,7 +84,7 @@ button:hover {
 }
 
 section {
-  animation: slideIn .8s linear, fadeIn .2s ease-in;
+  animation: slideIn 1.8s linear, fadeIn .2s ease-in;
 }
 
 
@@ -92,19 +92,15 @@ section {
 @keyframes slideIn {
   0% {
     transform: translateY(400px);
-    animation-timing-function: ease-out;
   }
   60% {
     transform: translateY(-50px);
-    animation-timing-function: ease-in;
   }
   80% {
     transform: translateY(10px);
-    animation-timing-function: ease-out;
   }
   100% {
     transform: translateY(0);
-    animation-timing-function: ease-in;
   }
 }
 
